# Nano

./: BUILD_ORDER.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  language-change.yml  strategy-library.yml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  language.md  nano-optimization-loop.md  status.md
docs/papers/: 01-why-nano.md  02-the-agentic-compiler.md  03-determinism.md  04-provenance.md  05-why-not-go.md  06-why-not-typescript.md  07-nano-vs-pine.md  08-llm-integration.md  09-autonomous-systems.md  10-nano-family.md  11-performance.md  12-security.md  13-design-principles.md  14-future-work.md  15-closed-loop-engineering.md  16-quantum-computing.md  17-heterogeneous-compute.md  README.md
examples/: README.md  momentum_demo.py  provenance_signing_demo.py
nano/: __init__.py
nano/aethercode/: __init__.py  diagnostics.py  highlight.py  preview.py
nano/bridge/: __init__.py  ats_bridge.py  backtester.py  provenance.py
nano/compiler/: __init__.py  codegen.py  errors.py  lexer.py  parser.py  tokens.py
nano/examples/: ai_agent.nano  ai_agent_ir.json  basic_rsi.nano  basic_rsi_ir.json  mean_reversion.nano  mean_reversion_ir.json  momentum.nano  momentum_ir.json  optimization_loop.json  risk_manager.nano  risk_manager_ir.json  volatility_guard.nano  volatility_guard_ir.json
nano/ir/: __init__.py  graph.py  nodes.py  schema.py
nano/loop/: __init__.py  graph.py  mutation.py  nodes.py  quantum.py
nano/memory/: __init__.py  patterns.py
nano/runtime/: __init__.py  effects.py  interpreter.py  scheduler.py
tests/: test_aethercode.py  test_bridge.py  test_compiler.py  test_conformance.py  test_examples.py  test_interpreter.py  test_ir.py  test_library.py  test_loop.py  test_memory.py  test_momentum_demo.py  test_provenance.py  test_readme_example.py
