[project]
name = "aether-nano"
version = "0.1.0"
description = "A deterministic strategy DSL and reference runtime for host-governed decision rules."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Aether AI LLC" }]
keywords = [
  "nano", "aether", "compiler", "deterministic-execution", "dsl",
  "quantitative-trading", "algorithmic-trading", "execution-engine", "provenance",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Compilers",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Zero mandatory dependencies -- stdlib only, matching the reference runtime.
dependencies = []

[project.urls]
Homepage = "https://aethersystems.net"
"Aether Code (web IDE)" = "https://app.aethersystems.net/code"
Repository = "https://github.com/DBarr3/Nano"
Documentation = "https://github.com/DBarr3/Nano/tree/main/docs"

[project.optional-dependencies]
# Signed, non-repudiable audit receipts over decision-gate records.
# See nano/bridge/provenance.py.
provenance = ["aether-protocol-c"]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nano*"]

# The source/IR conformance and strategy corpora live alongside the package.
# Ship them deliberately so installed distributions retain the documented assets.
[tool.setuptools.package-data]
nano = [
  "examples/*.nano",
  "examples/*.json",
  "library/*/*.nano",
  "library/*/*.json",
]
